[gd_scene load_steps=36 format=2]

[ext_resource path="res://sprites/Menu/MenuFrames/menu0008.png" type="Texture" id=1]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0006.png" type="Texture" id=2]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0001.png" type="Texture" id=3]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0002.png" type="Texture" id=4]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0003.png" type="Texture" id=5]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0007.png" type="Texture" id=6]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0004.png" type="Texture" id=7]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0005.png" type="Texture" id=8]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0020.png" type="Texture" id=9]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0021.png" type="Texture" id=10]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0022.png" type="Texture" id=11]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0023.png" type="Texture" id=12]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0014.png" type="Texture" id=13]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0013.png" type="Texture" id=14]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0010.png" type="Texture" id=15]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0011.png" type="Texture" id=16]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0009.png" type="Texture" id=17]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0012.png" type="Texture" id=18]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0000.png" type="Texture" id=19]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0019.png" type="Texture" id=20]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0015.png" type="Texture" id=21]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0018.png" type="Texture" id=22]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0017.png" type="Texture" id=23]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0016.png" type="Texture" id=24]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0025.png" type="Texture" id=25]
[ext_resource path="res://sprites/Menu/MenuFrames/menu0024.png" type="Texture" id=26]
[ext_resource path="res://scenes/NewGameButton.gd" type="Script" id=27]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=28]
[ext_resource path="res://scenes/Main.tscn" type="PackedScene" id=29]
[ext_resource path="res://sprites/Menu/Button.png" type="Texture" id=30]
[ext_resource path="res://audio/Menu/rain_menu_theme.wav" type="AudioStream" id=31]
[ext_resource path="res://scripts/main_menu/master_volume_slider.gd" type="Script" id=32]
[ext_resource path="res://sprites/Menu/CloseOptionsButton.gd" type="Script" id=33]
[ext_resource path="res://sprites/Menu/OptionsTextureRect.gd" type="Script" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 26 ), ExtResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_bottom = 20.0
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -17.9336 )
scale = Vector2( 0.8, 0.833333 )
frames = SubResource( 1 )
frame = 24
playing = true
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 389.0
margin_top = 162.0
margin_right = 600.0
margin_bottom = 211.0
rect_scale = Vector2( 0.996687, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 213.0
margin_bottom = 49.0
grow_horizontal = 0
grow_vertical = 0
text = "NEW GAME"
icon = ExtResource( 30 )
flat = true
clip_text = true
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = ExtResource( 29 )

[node name="NewGameLabel" type="Label" parent="VBoxContainer/NewGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 213.0
margin_bottom = 102.0
grow_horizontal = 0
grow_vertical = 0
text = "NEW GAME"
icon = ExtResource( 30 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="VBoxContainer/OptionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 213.0
margin_bottom = 155.0
grow_horizontal = 0
grow_vertical = 0
text = "NEW GAME"
icon = ExtResource( 30 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="VBoxContainer/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsTextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -465.75
margin_top = -216.055
margin_right = -266.75
margin_bottom = -152.055
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 4.7815, 6.40349 )
texture = ExtResource( 30 )
stretch_mode = 4
script = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsTextureRect"]
margin_left = 77.0
margin_top = 17.0
margin_right = 177.0
margin_bottom = 33.0
max_value = 5.0
step = 0.1
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsTextureRect"]
margin_left = 24.0355
margin_top = 17.0
margin_right = 73.0355
margin_bottom = 31.0
text = "Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseOptionsButton" type="Button" parent="OptionsTextureRect"]
margin_left = 77.0
margin_top = 36.395
margin_right = 144.0
margin_bottom = 56.395
rect_scale = Vector2( 0.5, 0.5 )
text = "Close"
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/OptionsButton" to="OptionsTextureRect" method="_on_OptionsButton_pressed"]
[connection signal="value_changed" from="OptionsTextureRect/MasterVolumeSlider" to="OptionsTextureRect/MasterVolumeSlider" method="_on_MasterVolumeSlider_value_changed"]
[connection signal="pressed" from="OptionsTextureRect/CloseOptionsButton" to="OptionsTextureRect" method="_on_CloseOptionsButton_pressed"]
